pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-032-entity_and_numeric_character_references.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/032-entity_and_numeric_character_references.md
---
foo[1]

[1]: /föö föö
